--- a/index.html
+++ b/index.html
@@ -5,14 +5,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A website dedicated to provide information on fitness industry">
-    <meta name="keywords" content="fitness, dumbell, kettlebell, barbell">
+    <meta name="description" content="A website dedicated on providing information on fitness industry">
+    <meta name="keywords" content="fitness, dumbell, kettlebell, barbell, weight loss, build muscle">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Fitness Factory</title>
 </head>
 
 <body>
-
+    <header class="header">
+        <div class="container">
+            <a href="index.html">
+                <h1 class="logo"> Fitness factory </h1>
+            </a>
+            <nav>
+                <ul class="nav">
+                    <li><a class="active" href="index.html">Home</a></li>
+                    <li><a href="#">Programs</a></li>
+                    <li><a href="#">Nutrition</a></li>
+                    <li><a href="#">Sign up</a></li>
+                    <li><a href="#my-footer">About us</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 </body>
 
 </html>
