Navbar going good

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     <header class="header">
         <div class="container">
             <a href="index.html">
-                <h1 class="logo"> Fitness factory </h1>
+                <div class="logo"> Fitness factory </div>
             </a>
             <nav>
                 <ul class="nav">
                     <li><a class="active" href="index.html">Home</a></li>
-                    <li><a href="#">Programs</a></li>
-                    <li><a href="#">Nutrition</a></li>
-                    <li><a href="#">Sign up</a></li>
+                    <li><a href="program.html">Programs</a></li>
+                    <li><a href="nutrition.html">Nutrition</a></li>
+                    <li><a href="signup.html">Sign up</a></li>
                     <li><a href="#my-footer">About us</a></li>
                 </ul>
             </nav>
