Main image nearly done

--- a/index.html
+++ b/index.html
@@ -28,6 +28,20 @@
             </nav>
         </div>
     </header>
+
+    <section id="main-section">
+        <div class="main-section-image">
+            <div class="container">
+                <div class="main-heading">
+                    <h1>Transform your body</h1>
+                    <p>
+                        With the proper training programme, use of different equipment and nutrition advices, transform
+                        your body within six months.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
