--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="container">
             <div class="card">
                 <img src="assets/images/barbell.png" />
-                <h2>Barbell workout</h2>
+                <h2>Barbell</h2>
                 <p>
                     Barbells are a valuable tool in the arsenal of a person who wants to gain strength efficiently and
                     safely.
@@ -61,7 +61,7 @@
             </div>
             <div class="card">
                 <img src="assets/images/kettlebell.png" />
-                <h2>Kettlebell workout</h2>
+                <h2>Kettlebell</h2>
                 <p>
                     Barbells are a valuable tool in the arsenal of a person who wants to gain strength efficiently and
                     safely.
@@ -75,7 +75,7 @@
             </div>
             <div class="card">
                 <img src="assets/images/barbell.png" />
-                <h2>Dumbell workout</h2>
+                <h2>Dumbell</h2>
                 <p>
                     Barbells are a valuable tool in the arsenal of a person who wants to gain strength efficiently and
                     safely.
@@ -89,7 +89,7 @@
             </div>
             <div class="card">
                 <img src="assets/images/barbell.png" />
-                <h2>Calisthenics workout</h2>
+                <h2>Calisthenics</h2>
                 <p>
                     Barbells are a valuable tool in the arsenal of a person who wants to gain strength efficiently and
                     safely.
@@ -104,32 +104,27 @@
         </div>
     </section>
     <footer id="my-footer">
-
-        <div class="row">
-          <div class="column">
-            <h2>Contact us</h2>
-            <p><span>Address :</span> Bluebell Business Centre, unit 8, Inchicore, Dublin, D12 PW18</p>
-            <p><span>MONDAY – FRIDAY: 8am – 5pm</span></p>
-            <p><span>Phone :</span> 085 112 5340</p>
-            <p><span>Email :</span>support@athleanx.com</p>
-            <p>Province: Leinster</p>
-          </div>
-          <div class="column">
-            <h2>About us</h2>
-            <p>Shop Training</p>
-            <p>Shop Equipment</p>
-            <p>Shop Supplements</p>
-          </div>
-          <div class="column">
-            <h2>Mobile App</h2>
-            <p>Some text..</p>
-          </div>
-          <div class="column">
-            <h2>Social links</h2>
-            <p>Some text..</p>
-          </div>
+        <div class="container">
+            <div class="footer-card">
+                <h2>Contact us</h2>
+                <p><span>Address :</span> Bluebell Business Centre, unit 8, Inchicore, Dublin, D12 PW18</p>
+                <p><span>MONDAY – FRIDAY: 8am – 5pm</span></p>
+                <p><span>Phone :</span> 085 112 5340</p>
+                <p><span>Email :</span>support@athleanx.com</p>
+                <p>Province: Leinster</p>
+            </div>
+            <div class="footer-card">
+                <h2>About us</h2>
+                <p>Shop Training</p>
+                <p>Shop Equipment</p>
+                <p>Shop Supplements</p>
+            </div>
+            <div class="footer-card">
+                <h2>Social links</h2>
+                <p>Some text..</p>
+            </div>
         </div>
-      </footer>
+    </footer>
 </body>
 
 </html>
