--- a/signup.html
+++ b/signup.html
@@ -28,6 +28,28 @@
             </nav>
         </div>
     </header>
+    <footer id="my-footer">
+        <div class="container">
+            <div class="footer-card">
+                <h2>Contact us</h2>
+                <p><span>Address :</span> Bluebell Business Centre, unit 8, Inchicore, Dublin, D12 PW18</p>
+                <p><span>MONDAY – FRIDAY: 8am – 5pm</span></p>
+                <p><span>Phone :</span> 085 112 5340</p>
+                <p><span>Email :</span>support@athleanx.com</p>
+                <p>Province: Leinster</p>
+            </div>
+            <div class="footer-card">
+                <h2>About us</h2>
+                <p>Shop Training</p>
+                <p>Shop Equipment</p>
+                <p>Shop Supplements</p>
+            </div>
+            <div class="footer-card">
+                <h2>Social links</h2>
+                <p>Some text..</p>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
