Added social links

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="A website dedicated on providing information on fitness industry">
     <meta name="keywords" content="fitness, dumbell, kettlebell, barbell, weight loss, build muscle">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Fitness Factory</title>
 </head>
 
@@ -114,14 +115,24 @@
                 <p>Province: Leinster</p>
             </div>
             <div class="footer-card">
-                <h2>About us</h2>
+                <h2>Online shop</h2>
                 <p>Shop Training</p>
                 <p>Shop Equipment</p>
                 <p>Shop Supplements</p>
             </div>
             <div class="footer-card">
                 <h2>Social links</h2>
-                <p>Some text..</p>
+                <p><a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Check our facebook page"><i
+                            class="fa-brands fa-facebook fa"></i></a>
+                    <a href="https://youtube.com" target="_blank" rel="noopener" aria-label="Check our youtube page"><i
+                            class="fa-brands fa-youtube fa" style="font-size:36px"></i></a>
+                    <a href="https://instagram.com" target="_blank" rel="noopener"
+                        aria-label="Check our instagram page"><i class="fa-brands fa-instagram fa"></i></a>
+                    <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Check our twitter page"><i
+                            class="fa-brands fa-twitter fa"></i></a>
+                    <a href="https://linkedin.com" target="_blank" rel="noopener"
+                        aria-label="Check our linkedin page"><i class="fa-brands fa-linkedin fa"></i></a>
+                </p>
             </div>
         </div>
     </footer>
