Added workout images

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 </p>
             </div>
             <div class="card">
-                <img src="assets/images/barbell.png" />
+                <img src="assets/images/dumbell.png" />
                 <h2>Dumbell</h2>
                 <p>
                     Barbells are a valuable tool in the arsenal of a person who wants to gain strength efficiently and
@@ -89,7 +89,7 @@
                 </p>
             </div>
             <div class="card">
-                <img src="assets/images/barbell.png" />
+                <img src="assets/images/calisthenics.png" />
                 <h2>Calisthenics</h2>
                 <p>
                     Barbells are a valuable tool in the arsenal of a person who wants to gain strength efficiently and
