Adding workout text

--- a/index.html
+++ b/index.html
@@ -51,55 +51,43 @@
                 <h2>Barbell</h2>
                 <p>
                     Barbells are a valuable tool in the arsenal of a person who wants to gain strength efficiently and
-                    safely.
-                    Increasing the weight gradually over a period of time will tear down muscle tissue and then rebuild
-                    it,
-                    ultimately making you stronger. Because you add weight progressively with free weights, you don't
-                    have
-                    to add repetitions and lengthen your workout. Exercise experts also point to several other benefits
-                    of barbells.
+                    safely. Increasing the weight gradually over a period of time will tear down muscle tissue and then
+                    rebuild it, ultimately making you stronger. Because you add weight progressively with free weights,
+                    you don't have to add repetitions and lengthen your workout. Exercise experts also point to several
+                    other benefits of barbells.
                 </p>
             </div>
             <div class="card">
                 <img src="assets/images/kettlebell.png" />
                 <h2>Kettlebell</h2>
                 <p>
-                    Barbells are a valuable tool in the arsenal of a person who wants to gain strength efficiently and
-                    safely.
-                    Increasing the weight gradually over a period of time will tear down muscle tissue and then rebuild
-                    it,
-                    ultimately making you stronger. Because you add weight progressively with free weights, you don't
-                    have
-                    to add repetitions and lengthen your workout. Exercise experts also point to several other benefits
-                    of barbells.
+                    Kettlebells enchances functional strength, it promotes the entire body moving as a unit and that
+                    seems to apply very quickly to athletics. It's one of the reasons why so many people have adopted
+                    kettlebell training almost universally.
+                </p>
+                <p>A non-glamorous moves like Turkish getup, which is one of the very best moves for jiu-jitsu, it's
+                    just phenomenal for your stability your core and your ability to get out from under the bottom
+                    positions. These principles of using the entire body with kettlebells, using different parts of
+                    your body, using your legs your core your ab all in one one workout.
                 </p>
             </div>
             <div class="card">
                 <img src="assets/images/dumbell.png" />
                 <h2>Dumbell</h2>
                 <p>
-                    Barbells are a valuable tool in the arsenal of a person who wants to gain strength efficiently and
-                    safely.
-                    Increasing the weight gradually over a period of time will tear down muscle tissue and then rebuild
-                    it,
-                    ultimately making you stronger. Because you add weight progressively with free weights, you don't
-                    have
-                    to add repetitions and lengthen your workout. Exercise experts also point to several other benefits
-                    of barbells.
+                    Dumbells are excellent way for home workout, especially if you dont have time to go to the gym. They
+                    are great for building muscle mass, muscular endurance and promote weight loss. As oppose to the
+                    barbells, they require more effort in creating a stability during workout and can easily be stored
+                    in your home.
                 </p>
             </div>
             <div class="card">
                 <img src="assets/images/calisthenics.png" />
                 <h2>Calisthenics</h2>
                 <p>
-                    Barbells are a valuable tool in the arsenal of a person who wants to gain strength efficiently and
-                    safely.
-                    Increasing the weight gradually over a period of time will tear down muscle tissue and then rebuild
-                    it,
-                    ultimately making you stronger. Because you add weight progressively with free weights, you don't
-                    have
-                    to add repetitions and lengthen your workout. Exercise experts also point to several other benefits
-                    of barbells.
+                    Calisthenic exercises are the easiest way to get in shape because they require little to no
+                    equipment.
+
                 </p>
             </div>
         </div>
