--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
                 <h2>Calisthenics</h2>
                 <p>
                     Calisthenic exercises are the easiest way to get in shape because they require little to no
-                    equipment.
+                    equipment. With this kind of workout you will be focused on compound exercises, meaning you will 
+                    perform exercises which involve a lot of different muscle groups.
 
                 </p>
             </div>
