adding main image section to other pages

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
     </header>
 
-    <section id="main-section">
+    <section class="main-section">
         <div class="main-section-image">
             <div class="container">
                 <div class="main-heading">
