--- a/nutrition.html
+++ b/nutrition.html
@@ -29,6 +29,20 @@
             </nav>
         </div>
     </header>
+
+    <section class="main-section">
+        <div class="main-section-nutrition-image">
+            <div class="container">
+                <div class="main-heading">
+                    <h1>Transform your body</h1>
+                    <p>
+                        With the proper training programme, use of different equipment and nutrition advices, transform
+                        your body within six months.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
     <footer id="my-footer">
         <div class="container">
             <div class="footer-card">
