adding nutrition content

--- a/nutrition.html
+++ b/nutrition.html
@@ -34,13 +34,38 @@
         <div class="main-section-nutrition-image">
             <div class="container">
                 <div class="main-heading">
-                    <h1>Transform your body</h1>
+                    <h1>Fuel your body</h1>
                     <p>
                         With the proper training programme, use of different equipment and nutrition advices, transform
                         your body within six months.
                     </p>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <section class="nutrition-info">
+        <div class="container">
+            <div class="nutrition-left">1</div>
+            <div class="nutrition-right">2</div>
+
+            <div class="nutrition-left">1</div>
+            <div class="nutrition-right">2</div>
+
+            <div class="nutrition-left">1</div>
+            <div class="nutrition-right">2</div>
+
+            <div class="nutrition-left">1</div>
+            <div class="nutrition-right">2</div>
+
+            <div class="nutrition-left">1</div>
+            <div class="nutrition-right">2</div>
+
+            <div class="nutrition-left">1</div>
+            <div class="nutrition-right">2</div>
+
+            <div class="nutrition-left">1</div>
+            <div class="nutrition-right">2</div>
         </div>
     </section>
     <footer id="my-footer">
