Adding more nutrient info

--- a/nutrition.html
+++ b/nutrition.html
@@ -36,8 +36,11 @@
                 <div class="main-heading">
                     <h1>Fuel your body</h1>
                     <p>
-                        With the proper training programme, use of different equipment and nutrition advices, transform
-                        your body within six months.
+                        We all know that you need to eat protein to build muscle. Carbs and fats help
+                        provide the energy needed to fuel your physical activities, but these are just
+                        the macronutrients. Most people are completely unaware of the powerful effects that
+                        certain vitamins and minerals or micronutrients having your capacity to build more
+                        muscle recover faster and to see better results.
                     </p>
                 </div>
             </div>
@@ -46,11 +49,48 @@
 
     <section class="nutrition-info">
         <div class="container">
-            <div class="nutrition-left">1</div>
-            <div class="nutrition-right">2</div>
+            <div class="nutrition-left"><img src="assets/images/cholesterol.jpg" alt="">></div>
+            <div class="nutrition-right">
+                <h2>Cholesterol</h2>
+                <p>First is a nutrient that will probably surprise you cholesterol now i know doctors trainers and
+                    dietitians have been demonizing cholesterol for years now for its supposed negative effect on heart
+                    health however research now indicates that there's no link between cholesterol intake and the risk
+                    of
+                    heart disease even though we have this evidence many people and professionals still cling to the
+                    belief
+                    that cholesterol and high cholesterol foods like eggs are bad if that happens to be you and you're
+                    trying to build muscle you should also know that reducing your cholesterol intake can significantly
+                    impair muscle growth for example in a 12-week long strength training study the scientists observed a
+                    dose-response relationship between dietary cholesterol and gains in lean muscle mass they also
+                    mentioned
+                    that this link held up even when the data was controlled for protein intake in other words the more
+                    cholesterol the
+                    participants ate the more muscle they
+                    gained in response to resistance
+                    training regardless of how much protein
+                    that they took in so don't feel like you
+                    have to follow a low cholesterol diet
+                    it's not necessary for heart health and
+                    it can actually significantly blunt your
+                    muscle growth progress</p>
+            </div>
 
-            <div class="nutrition-left">1</div>
-            <div class="nutrition-right">2</div>
+            <div class="nutrition-left"></div>
+            <div class="nutrition-right">
+                <h2>Zinc</h2>
+                <p>
+                    next is a nutrient that i've talked about quite a bit because it's so important for athletes zinc
+                    it's well known that zinc
+                    is a crucial mineral for your immune system but very few people realize that it also plays a crucial
+                    role in
+                    maintaining and gaining muscle mass in fact research shows that a zinc deficiency directly causes
+                    lean body mass losses and these muscle losses can
+                    be restored with zinc consumption research also shows that even a small zinc deficiency can stunt
+                    growth and human development one reason not getting enough zinc can impair muscle growth is that it
+                    significantly lowers levels of
+                    the primary male sex hormone testosterone which is obviously important for muscle growth
+                </p>
+            </div>
 
             <div class="nutrition-left">1</div>
             <div class="nutrition-right">2</div>
