--- a/program.html
+++ b/program.html
@@ -42,6 +42,30 @@
             </div>
         </div>
     </section>
+    <section class="program-info">
+        <div class="container">
+            <div class="program-one">1</div>
+            <div class="program-two">2</div>
+            <div class="program-three">1</div>
+
+            <div class="program-one">1</div>
+            <div class="program-two">2</div>
+            <div class="program-three">1</div>
+
+            <div class="program-one">1</div>
+            <div class="program-two">2</div>
+            <div class="program-three">1</div>
+
+            <div class="program-one">1</div>
+            <div class="program-two">2</div>
+            <div class="program-three">1</div>
+
+            <div class="program-one">1</div>
+            <div class="program-two">2</div>
+            <div class="program-three">1</div>
+
+        </div>
+    </section>
     <footer id="my-footer">
         <div class="container">
             <div class="footer-card">
