Nutrition more data added

--- a/nutrition.html
+++ b/nutrition.html
@@ -49,7 +49,7 @@
 
     <section class="nutrition-info">
         <div class="container">
-            <div class="nutrition-left"><img src="assets/images/cholesterol.jpg" alt="">></div>
+            <div class="nutrition-left"><img src="assets/images/cholesterol.jpg" alt=""></div>
             <div class="nutrition-right">
                 <h2>Cholesterol</h2>
                 <p>First is a nutrient that will probably surprise you cholesterol now i know doctors trainers and
@@ -75,7 +75,7 @@
                     muscle growth progress</p>
             </div>
 
-            <div class="nutrition-left"></div>
+            <div class="nutrition-left"><img src="assets/images/zinc.png" alt=""></div>
             <div class="nutrition-right">
                 <h2>Zinc</h2>
                 <p>
@@ -93,7 +93,17 @@
             </div>
 
             <div class="nutrition-left">1</div>
-            <div class="nutrition-right">2</div>
+            <div class="nutrition-right">
+                <h2>D3</h2>
+                <p>
+                    another very important vitamin for muscle growth is vitamin d3 this vitamin is produced naturally by
+                    the skin after exposure to ultraviolet radiation particularly uvb like what you get from sunlight
+                    vitamin d is important for people that want to improve their strength levels because it's required
+                    for optimal bone strength immune function mineral metabolism neuromuscular functioning and
+                    testosterone synthesis that's why your vitamin d levels influence strength development so much and
+                    interestingly enough your vitamin d levels also impact how resistant you are to injuries
+                </p>
+            </div>
 
             <div class="nutrition-left">1</div>
             <div class="nutrition-right">2</div>
