Adding more nutrition

--- a/nutrition.html
+++ b/nutrition.html
@@ -92,7 +92,7 @@
                 </p>
             </div>
 
-            <div class="nutrition-left">1</div>
+            <div class="nutrition-left"><img src="assets/images/d3.jpg" alt=""></div>
             <div class="nutrition-right">
                 <h2>D3</h2>
                 <p>
