Nutrition going good

--- a/nutrition.html
+++ b/nutrition.html
@@ -105,11 +105,38 @@
                 </p>
             </div>
 
-            <div class="nutrition-left">1</div>
-            <div class="nutrition-right">2</div>
+            <div class="nutrition-left">
+                <img src="assets/images/water.jpg" alt="">
+            </div>
+            <div class="nutrition-right">
+                <h2>Water</h2>
+                <p>
+                    next is water believe me i know hydration isn't the most exciting topic in the fitness world but it
+                    is extremely important for several reasons first of all don't forget that your muscles are
+                    about 79 water this is actually one way that dehydration impairs strength even slight dehydration
+                    reduces things like the motivation to train body temperature control and of course exercise
+                    performance dehydration also blunts muscle growth by lowering muscle protein synthesis while raising
+                    protein breakdown just a two percent dehydration rate is enough to impair cognition attention and
+                    movement control so being dehydrated will prevent muscle growth on a biological level and will also
+                    reduce how well you can perform at the gym that's why it's important to stay hydrated from a muscle
+                    building.
+                </p>
+            </div>
 
             <div class="nutrition-left">1</div>
-            <div class="nutrition-right">2</div>
+            <div class="nutrition-right">
+                <h2>Magnesium</h2>
+                <p>
+                    strength levels while reducing stress one of the reasons magnesium is so crucial for your health and
+                    your body composition is that it plays a significant role in the quality of your sleep the issue
+                    with magnesium is that many people happen to be deficient research indicates that only 15 to 50
+                    percent of americans consume enough magnesium plus we have data that shows that athletes likely need
+                    at least 20 is needed for the repair of muscle tissue and because just like zinc magnesium does get
+                    lost through your sweat now if you eat a lot of nutrient-dense foods especially lots of fruits
+                    vegetables nuts and beans you might get more than enough magnesium but to be on the safe side it's
+                    generally a good idea to take a magnesium supplement
+                </p>
+            </div>
 
             <div class="nutrition-left">1</div>
             <div class="nutrition-right">2</div>
