Adding mroe nutrient

--- a/nutrition.html
+++ b/nutrition.html
@@ -139,7 +139,19 @@
             </div>
 
             <div class="nutrition-left">1</div>
-            <div class="nutrition-right">2</div>
+            <div class="nutrition-right">
+                <h2>Creatine</h2>
+                <p>
+                    another nutrient that can highly influence muscle growth is of course creatine creatine is an
+                    organic molecule produced mainly in the liver and to a lesser extent in the kidneys and the
+                    pancreas this molecule enhances phosphocreatine storage in your muscles which increases the amount
+                    of phosphate availability for atp recycling bottom line is that your muscles can produce more energy
+                    that's why supplementing with creatine can enhance strength power and general workout performance as
+                    i said creatine supplementation is also excellent for muscle growth for example we have a study that
+                    found that men that trained for six weeks and also supplemented with creatine gained on average two
+                    kilograms more muscle mass than men that received a placebo instead
+                </p>
+            </div>
 
             <div class="nutrition-left">1</div>
             <div class="nutrition-right">2</div>
