--- a/nutrition.html
+++ b/nutrition.html
@@ -123,7 +123,9 @@
                 </p>
             </div>
 
-            <div class="nutrition-left">1</div>
+            <div class="nutrition-left">
+                <img src="assets/images/magnesium.jpg" alt="">
+            </div>
             <div class="nutrition-right">
                 <h2>Magnesium</h2>
                 <p>
@@ -143,7 +145,9 @@
                 </p>
             </div>
 
-            <div class="nutrition-left">1</div>
+            <div class="nutrition-left">
+                <img src="assets/images/creatine.jpg" alt="">
+            </div>
             <div class="nutrition-right">
                 <h2>Creatine</h2>
                 <p>
@@ -158,9 +162,11 @@
                 </p>
             </div>
 
-            <div class="nutrition-left">1</div>
+            <div class="nutrition-left">
+                <img src="assets/images/omega3.jpg" alt="">
+            </div>
             <div class="nutrition-right">
-                <h2>Omega 3</h2>
+                <h2>Omega-3</h2>
                 <p>
                     next we have omega-3 fatty acids which are often overlooked for how important and beneficial they
                     can be most people do recognize that omega-3 fatty acids have a broad range of health benefitsnext
