Readme adding images

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <section id="fitness-equipment">
         <div class="container">
             <div class="card">
-                <img src="assets/images/barbell.png" />
+                <img src="assets/images/barbell.png" alt="Barbell image"/>
                 <h2>Barbell</h2>
                 <p>
                     Barbells are a valuable tool in the arsenal of a person who wants to gain strength efficiently and
@@ -58,7 +58,7 @@
                 </p>
             </div>
             <div class="card">
-                <img src="assets/images/kettlebell.png" />
+                <img src="assets/images/kettlebell.png" alt="Kettlebell image"/>
                 <h2>Kettlebell</h2>
                 <p>
                     Kettlebells enchances functional strength, it promotes the entire body moving as a unit and that
@@ -72,7 +72,7 @@
                 </p>
             </div>
             <div class="card">
-                <img src="assets/images/dumbell.png" />
+                <img src="assets/images/dumbell.png" alt="Dumbell image"/>
                 <h2>Dumbell</h2>
                 <p>
                     Dumbells are excellent way for home workout, especially if you dont have time to go to the gym. They
@@ -82,7 +82,7 @@
                 </p>
             </div>
             <div class="card">
-                <img src="assets/images/calisthenics.png" />
+                <img src="assets/images/calisthenics.png" alt="Calisthenics image"/>
                 <h2>Calisthenics</h2>
                 <p>
                     Calisthenic exercises are the easiest way to get in shape because they require little to no
